# lang-plugin-test

./: CMakeLists.txt  README.md  build.sh
installer/: WixExtraCommands.xml
runtime/: CMakeLists.txt  README.md  guest_test.cpp  guest_test.h  host_test_api.cpp  test_api.cpp  test_plugin_test.c  test_plugin_test.cpp
test/: funcs.go  go.mod
